# frontier-folly

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  index.html
assets/: flame.glb  hypergate_out.glb  low_poly_fighter.glb  low_poly_fighter_2.glb  pipe_test.glb  test_ship.scn.ron
assets/shaders/: flame_shader.wgsl
assets_raw/: flame.blend  hypergate_animation.blend  hypergate_out.blend  jumper.blend  jumper_target.blend  laser_gan_enemy.blend  low_poly_fighter.blend  low_poly_fighter_2.blend  pipe_test.blend  tiles.blend
examples/: big_space_test.rs  editor.rs  flame_shader.rs  fly_zone.rs  hypergate_animation.rs  hypergate_animation_v2.rs  laser_beam.rs  physics_cubes.rs  simply_fly.rs  star_system.rs
src/: controller.rs  enviroment.rs  lib.rs  main.rs  object.rs  physics.rs  position.rs
src/controller/: debug_controller.rs  fighter_controller.rs  orbit_controller.rs
src/enviroment/: sand_cloud.rs
src/object/: laser_beam_bullet.rs  laser_gun.rs  ship.rs  small_hypergate.rs  thruster_flame.rs
src/physics/: big_space_sync.rs
