[package]
name = "frontier_folly"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.11"
bevy-inspector-egui = "0.19.0"
big_space = "0.3.0"
smooth-bevy-cameras = "0.9.0"
space_editor = {git = "https://github.com/rewin123/space_editor.git"}
