[package]
name = "frontier_folly"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.11", features = ["dynamic_linking"]}
bevy-inspector-egui = "0.19.0"
bevy_egui = "0.21.0"
bevy_tweening = "0.8.0"
big_space = "0.3.0"
rand = "0.8.5"
ron = "0.8.1"
serde = { version = "1.0.188", features = ["derive"] }
space_editor = {git = "https://github.com/rewin123/space_editor.git"}
